[gd_scene load_steps=9 format=3 uid="uid://b0jkycw0qdsja"]

[ext_resource type="Texture2D" uid="uid://w2swwqx3uvdp" path="res://images/spaceship_animation/spaceship_left.png" id="1_go5hm"]
[ext_resource type="Script" path="res://player.gd" id="1_r571m"]
[ext_resource type="Texture2D" uid="uid://btbs0b0q1k1y0" path="res://images/spaceship_animation/wounded_left.png" id="3_agpnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_td2oh"]
size = Vector2(216, 93.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqim6"]
atlas = ExtResource("1_go5hm")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_041br"]
atlas = ExtResource("1_go5hm")
region = Rect2(0, 648, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_yax7t"]
atlas = ExtResource("1_go5hm")
region = Rect2(0, 1296, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_xcpdc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqim6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_041br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yax7t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="AnimatableBody2D"]
position = Vector2(-500, 0)
script = ExtResource("1_r571m")

[node name="CollisionMain" type="CollisionShape2D" parent="."]
position = Vector2(-47, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_td2oh")
one_way_collision = true

[node name="SpriteMain" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xcpdc")
autoplay = "default"

[node name="CollisionAbove" type="CollisionShape2D" parent="."]
position = Vector2(-47, -647)
rotation = 1.5708
shape = SubResource("RectangleShape2D_td2oh")
one_way_collision = true

[node name="SpriteAbove" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -648)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xcpdc")
autoplay = "default"

[node name="CollisionBelow" type="CollisionShape2D" parent="."]
position = Vector2(-47, 649)
rotation = 1.5708
shape = SubResource("RectangleShape2D_td2oh")
one_way_collision = true

[node name="SpriteBelow" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 648)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xcpdc")
autoplay = "default"

[node name="TopWound" type="Node2D" parent="."]
position = Vector2(-5.5, -37)

[node name="Above" type="Sprite2D" parent="TopWound"]
position = Vector2(0, -648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Main" type="Sprite2D" parent="TopWound"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Below" type="Sprite2D" parent="TopWound"]
position = Vector2(0, 648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="MiddleWound" type="Node2D" parent="."]
position = Vector2(-5.5, -3.5)

[node name="Above" type="Sprite2D" parent="MiddleWound"]
position = Vector2(0, -648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Main" type="Sprite2D" parent="MiddleWound"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Below" type="Sprite2D" parent="MiddleWound"]
position = Vector2(0, 648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="BottomWound" type="Node2D" parent="."]
position = Vector2(-5.5, 30)

[node name="Above" type="Sprite2D" parent="BottomWound"]
position = Vector2(0, -648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Main" type="Sprite2D" parent="BottomWound"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")

[node name="Below" type="Sprite2D" parent="BottomWound"]
position = Vector2(0, 648)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_agpnv")
